<resources>
    <string name="app_name">Персональный кошелек</string>

    <string name="navigation_drawer_open">Открытие левой шторки</string>
    <string name="navigation_drawer_close">Закрытие левой шторки</string>

    <string name="action_settings">Settings</string>
    <string name="private_wallet">Личный кошелёк</string>
    <string name="main">Главная</string>
    <string name="add_spending">Добавить расход</string>
    <string name="add_income">Добавить доход</string>
    <string name="check_balance">Проверить баланс</string>
    <string name="all_income">Все доходы</string>
    <string name="all_spending">Все расходы</string>
    <string name="additionally">Дополнительно</string>
    <string name="calculator">Калькулятор</string>
    <string name="exchange_rates">Курс валют</string>
    <string name="all">Всего</string>

    <string name="total">Всего :</string>
    <string name="currency_name">грн</string>
    <string-array name="all_month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string name="empty_double">0.00</string>
    <string name="get_currency">Получить курс валют</string>
    <string name="currency_sum">Сумма валюты</string>
    <string name="exchange_rate">Курс валюты к гривне</string>
    <string name="save">Сохранить</string>
    <string name="date_and_time">Дата и время</string>
    <string name="select_data">Выберите дату</string>
    <string name="category">Категория</string>
    <string name="no_select">не выбрано</string>
    <string name="sum">Сумма</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="know_exchange_rate">Узнать курс</string>
    <string name="photo">Фото</string>
    <string name="add_check">Добавьте чек</string>
    <string name="comment_label">Комментарий</string>
    <string name="all_costs">Все расходы</string>
    <string name="your_balance">Ваш баланс</string>
    <string name="for_all_time">За все время</string>
    <string name="for_month">За месяц</string>
    <string name="for_week">За неделю</string>
    <string name="for_today">За сегодня</string>
    <string name="your_costs">Ваши расходы</string>
    <string name="your_income">Ваши доходы</string>
    <string name="you_choosed_category">"Вы выбрали категорию: "</string>
    <string name="enter_new_category_name">Введите название новой категории</string>
    <string name="create_new_category">"Создана новая категория: "</string>
    <string name="cancel">Отмена</string>
    <string name="deleted">удалена</string>
    <string name="attention">Внимание</string>
    <string name="confirm_deletion">Вы действительно хотите удалить эту карегорию?</string>
    <string name="yes">Да</string>
    <string name="change_category">Изменить категорию</string>
    <string name="carrency">Валюта</string>
    <string name="do_you_want_to_exit">Вы действительно хотите выйти из приложения?</string>
    <string name="saved">Сохранено</string>
    <string name="may_be_something_empty">Возможно вы не ввели сумму или категорию</string>
    <string name="no_selected">не выбрано</string>
    <string name="delete">Удалить</string>
    <string name="select_action">Выберите действие</string>
    <string name="confirm_deletion_action">Вы уверены что хотите удалить эту запись?</string>
    <string name="change">Изменить</string>
    <string name="error">Ошибка</string>
    <string name="dollar">Доллар</string>
    <string name="euro">Евро</string>
    <string name="ruble">Рубль</string>
    <string name="something_was_wrong">Что-то пошло не так. Возможно отсутствует соединение с интернетом</string>

    <string-array name="currencyList">
        <item>Валюта</item>
        <item>USD</item>
        <item>EUR</item>
        <item>RUR</item>
    </string-array>
</resources>
