<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="60dp" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_margin="16dp"
    android:background="@drawable/shape_border_around">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:background="#f8f8f8"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/date_and_time"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/select_data"
            android:onClick="onButtonDateClick"
            android:id="@+id/txtDate"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#258BD4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtTime"

            android:layout_alignTop="@+id/txtDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#258BD4"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:id="@+id/rowChangeCategory"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/category"
            android:id="@+id/textView9"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/no_select"
            android:id="@+id/txtCategory"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeCategoryImage"
            android:layout_below="@+id/textView9"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/arrow_right"
            android:onClick="onImageChangeCategoryClick"
            android:background="#ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rowChangeCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout3"
        android:background="#f8f8f8"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sum"
            android:id="@+id/textView11"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/editTxtSum"
            android:layout_alignStart="@+id/editTxtSum" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTxtSum"
            android:hint="@string/enter_sum"
            android:imeOptions="actionDone"
            android:layout_alignWithParentIfMissing="false"
            android:gravity="end"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculator_img"
            android:src="@mipmap/ic_calculator"
            android:background="#00ffffff"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout5"
        android:padding="16dp"
        android:layout_below="@+id/relativeLayout3"
        android:layout_alignLeft="@+id/relativeLayout3"
        android:layout_alignStart="@+id/relativeLayout3">

        <Spinner
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/spinnerCurrency"
            android:hint="@string/know_exchange_rate"
            android:imeOptions="actionDone"
            android:layout_alignWithParentIfMissing="false"
            android:singleLine="true"
            android:entries="@array/currencyList"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:layout_alignTop="@+id/mapIcon"
            android:layout_toEndOf="@+id/mapIcon"
            android:layout_toRightOf="@+id/mapIcon"
            android:gravity="end|center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapIcon"
            android:src="@mipmap/ic_carrency"
            android:background="#00ffffff"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout6"
        android:padding="16dp"
        android:layout_below="@+id/relativeLayout5"
        android:layout_alignLeft="@+id/relativeLayout5"
        android:layout_alignStart="@+id/relativeLayout5"
        android:background="#f8f8f8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/photo"
            android:id="@+id/textView8"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/makePhotoText"
            android:layout_alignStart="@+id/makePhotoText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/makePhotoText"
            android:hint="@string/add_check"
            android:imeOptions="actionDone"
            android:layout_alignWithParentIfMissing="false"
            android:singleLine="true"
            android:gravity="end"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusable="false"
            android:longClickable="false"
            android:cursorVisible="false"
            android:onClick="makePhotoOfCheck" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/makePhotoIcon"
            android:src="@mipmap/ic_photo"
            android:background="#00ffffff"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/relativeLayout4"
        android:layout_below="@+id/relativeLayout6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editComment"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:singleLine="true"
            android:hint="@string/comment_label" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/buttonSaveEvent"
        android:layout_below="@+id/relativeLayout4"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#41B9FF"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>